# axis

./: .gitignore  Cargo.toml  README.md  justfile
.cargo/: config.toml
apps/axis-app/: Cargo.toml
apps/axis-app/src/: agent_provider_popup.rs  agent_sessions.rs  agent_timeline.rs  attention.rs  automation.rs  daemon_client.rs  main.rs  remote_terminals.rs  review.rs  worktrees.rs
apps/axis-cli/: Cargo.toml
apps/axis-cli/src/: main.rs
apps/axisd/: Cargo.toml
apps/axisd/src/: agent_runtime.rs  gui_launcher.rs  main.rs  persistence.rs  pty_host.rs  registry.rs  request_handler.rs  transcript_store.rs
apps/axisd/tests/: agent_polling.rs  control_plane_parity.rs  daemon_boot.rs  gui_launch.rs  review_surface_parity.rs  runtime_linking.rs  terminal_reattach.rs  workspace_filtering.rs
apps/axisd/tests/support/: mod.rs
apps/canvas-app/: Cargo.toml
apps/canvas-app/src/: main.rs
apps/canvas-cli/: Cargo.toml
apps/canvas-cli/src/: main.rs
assets/branding/: README.md
crates/axis-agent-runtime/: Cargo.toml
crates/axis-agent-runtime/src/: bin_resolver.rs  cli_protocol.rs  error.rs  events.rs  lib.rs  provider.rs  review_diff.rs  session.rs  worktree.rs
crates/axis-agent-runtime/src/adapters/: codex.rs  cursor.rs  fake.rs  mod.rs  process_only.rs
crates/axis-agent-runtime/tests/: approval_flow.rs  capability_validation.rs  cli_protocol.rs  cli_protocol_extended.rs  codex_adapter.rs  fake_provider.rs  lifecycle_transitions.rs  multi_session.rs  process_only_adapter.rs  review_diff.rs  session_lifecycle.rs  session_structured.rs  worktree_service.rs
crates/axis-core/: Cargo.toml  build.rs
crates/axis-core/src/: agent.rs  agent_history.rs  automation.rs  lib.rs  paths.rs  review.rs  terminal.rs  workdesk.rs  worktree.rs
crates/axis-core/tests/: agent_history_records.rs  agent_records.rs  review_records.rs
crates/axis-editor/: Cargo.toml
crates/axis-editor/src/: lib.rs
crates/axis-lsp/: Cargo.toml
crates/axis-lsp/src/: lib.rs  manager.rs  transport.rs
crates/axis-terminal/: Cargo.toml
crates/axis-terminal/src/: client.rs  host.rs  lib.rs
crates/axis-terminal/tests/: reattach_replay.rs
crates/canvas-core/: Cargo.toml
crates/canvas-core/src/: lib.rs
crates/canvas-editor/: Cargo.toml
crates/canvas-editor/src/: lib.rs
crates/canvas-terminal/: Cargo.toml
crates/canvas-terminal/src/: lib.rs
crates/ghostty-sys/: Cargo.toml  build.rs
crates/ghostty-sys/src/: lib.rs
crates/process-manager/: Cargo.toml
crates/process-manager/src/: lib.rs
docs/: cmux-gap-analysis.md  macos-bootstrap-plan.md  v0-prototype-scope.md  workdesk-layout-modes.md
docs/superpowers/plans/: 2026-03-26-acp-first-agent-runtime-baseline.md  2026-03-27-agent-provider-popup.md  2026-03-28-review-surface.md  2026-04-07-track-a-agent-stability-review.md  2026-04-07-track-b-editor-evolution.md  2026-04-07-worktree-setup.md
docs/superpowers/specs/: 2026-03-26-acp-first-agent-runtime-design.md  2026-03-27-agent-provider-popup-design.md  2026-03-28-review-surface-design.md  2026-04-07-axis-conductor-replacement-design.md
scripts/: bootstrap-macos.sh  setup-worktree.sh  smoke-acp-demo.sh  smoke-axisd-reattach.sh
