[workspace]
members = [
    "apps/axis-app",
    "apps/axis-cli",
    "apps/axisd",
    "crates/axis-agent-runtime",
    "crates/axis-core",
    "crates/axis-editor",
    "crates/axis-terminal",
    "crates/process-manager",
    "crates/ghostty-sys",
    "crates/axis-lsp",
]
resolver = "2"

[workspace.dependencies]
parking_lot = "0.12"
ropey = "1"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.81"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "warn"

[patch.crates-io]
gpui = { path = "third_party/gpui" }
