[package]
name = "axis-app"
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
version.workspace = true

[dependencies]
axis-agent-runtime = { path = "../../crates/axis-agent-runtime" }
axis-core = { path = "../../crates/axis-core" }
axis-editor = { path = "../../crates/axis-editor" }
axis-terminal = { path = "../../crates/axis-terminal" }
gpui = "0.2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
