[package]
name = "axis-app"
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
version.workspace = true

[dependencies]
axis-agent-runtime = { path = "../../crates/axis-agent-runtime" }
parking_lot = { workspace = true }
axis-core = { path = "../../crates/axis-core" }
axis-editor = { path = "../../crates/axis-editor" }
axis-terminal = { path = "../../crates/axis-terminal" }
gpui = "0.2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
gpui = { version = "0.2.2", features = ["test-support"] }
