[package]
name = "axis-cli"
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "axis"
path = "src/main.rs"

[dependencies]
axis-core = { path = "../../crates/axis-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
