[package]
name = "axisd"
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
axis-agent-runtime = { path = "../../crates/axis-agent-runtime" }
axis-core = { path = "../../crates/axis-core" }
axis-terminal = { path = "../../crates/axis-terminal" }
process-manager = { path = "../../crates/process-manager" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
