[package]
name = "axis-agent-runtime"
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
axis-core = { path = "../axis-core" }
process-manager = { path = "../process-manager" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
tempfile = "3"

[lib]
path = "src/lib.rs"
