[package]
name = "axis-terminal"
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
axis-core = { path = "../axis-core" }
ghostty-sys = { path = "../ghostty-sys" }
process-manager = { path = "../process-manager" }
